# Stdiscm_ProblemSet4

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODE_REVIEW.md  CONFIGURATION.md  IMPLEMENTATION.md  NETWORK_SETUP.md  PRESENTATION_OUTLINE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  TESTING_GUIDE.md  TESTING_QUICK_REFERENCE.md  ThreadSafeQueue.hpp  build.bat  build.sh  specs.md
client/: main.cpp  mainwindow.cpp  mainwindow.h  ocr_client.cpp  ocr_client.h
dataset/__MACOSX/dataset/: ._labels.csv
proto/: ocr.proto
server/: main.cpp
